corrected the links

--- a/basket_full+registration_form+check_phone.html
+++ b/basket_full+registration_form+check_phone.html
@@ -285,7 +285,7 @@
             <a href="index.html" class="footer__col logo_light"> Logo </a>
             <div class="footer__col">
                 <p class="footer_main_text_contrast">Покупателю</p>
-                <a href="#" class="footer_main_text opacity">Личный кабинет</a>
+                <a href="personal_account_info.html" class="footer_main_text opacity">Личный кабинет</a>
                 <a href="catalog_main.html" class="footer_main_text opacity">Каталог</a>
                 <a href="delivery.html" class="footer_main_text opacity">Доставка</a>
                 <a href="payment.html" class="footer_main_text opacity">Оплата</a>
