adaptive basket and personal account

--- a/basket_full.html
+++ b/basket_full.html
@@ -332,10 +332,10 @@
         </div>
     </div>
     <div class="container order_btn">
-        <a href="catalog_main.html" class="btn_main">
+        <a href="catalog_main.html" class="btn_main turn_catalog">
             <p class="main_text uppercase btn_text">вернуться в каталог</p>
         </a>
-        <a href="making_order_data.html" class="btn_main">
+        <a href="making_order_data.html" class="btn_main make_order">
             <p class="main_text uppercase btn_text">оформить заказ</p>
         </a>
     </div>
