--- a/personal_account_orders.html
+++ b/personal_account_orders.html
@@ -203,9 +203,11 @@
         <div class="orders_history">
             <!-- Строка заказа начало -->
             <div class="orders_history__item">
-                <div class="item_number main_text uppercase"> заказ №35021-0003 </div>
-                <div class="order_create main_text_addit_dark"> создан 12.06.2023 г. </div>
-                <div class="order_delivery main_text_addit_dark"> трек-номер: ABC123456789 </div>
+                <div class="order_group">
+                    <div class="item_number main_text uppercase"> заказ №35021-0003 </div>
+                    <div class="order_create main_text_addit_dark"> создан 12.06.2023 г. </div>
+                    <div class="order_delivery main_text_addit_dark"> трек-номер: ABC123456789 </div>
+                </div>
                 <div class="order_value main_text"> 31 400 р. </div>
                 <a href="personal_account_orders_opened.html" class="open_order">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
@@ -216,9 +218,11 @@
             <!-- Строка заказа конец -->
             <!-- Строка заказа начало -->
             <div class="orders_history__item">
-                <div class="item_number main_text uppercase"> заказ №35021-0002 </div>
-                <div class="order_create main_text_addit_dark"> создан 01.02.2024 г. </div>
-                <div class="order_delivery main_text_addit_dark"> получен 10.02.2024 г. </div>
+                <div class="order_group">
+                    <div class="item_number main_text uppercase"> заказ №35021-0002 </div>
+                    <div class="order_create main_text_addit_dark"> создан 01.02.2024 г. </div>
+                    <div class="order_delivery main_text_addit_dark"> получен 10.02.2024 г. </div>
+                </div>
                 <div class="order_value main_text"> 64 000 р. </div>
                 <a href="#" class="open_order">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
@@ -229,9 +233,11 @@
             <!-- Строка заказа конец -->
             <!-- Строка заказа начало -->
             <div class="orders_history__item">
-                <div class="item_number main_text uppercase"> заказ №35021-0001 </div>
-                <div class="order_create main_text_addit_dark"> создан 12.06.2023 г. </div>
-                <div class="order_delivery main_text_addit_dark"> получен 20.06.2023 г. </div>
+                <div class="order_group">
+                    <div class="item_number main_text uppercase"> заказ №35021-0001 </div>
+                    <div class="order_create main_text_addit_dark"> создан 12.06.2023 г. </div>
+                    <div class="order_delivery main_text_addit_dark"> получен 20.06.2023 г. </div>
+                </div>
                 <div class="order_value main_text"> 25 000 р. </div>
                 <a href="#" class="open_order">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
