--- a/personal_account_orders_opened.html
+++ b/personal_account_orders_opened.html
@@ -203,9 +203,11 @@
         <div class="orders_history">
             <!-- Строка заказа начало -->
             <div class="orders_history__item  orders_history__item--opened">
-                <div class="item_number main_text uppercase"> заказ №35021-0003 </div>
-                <div class="order_create main_text_addit_dark"> создан 12.06.2023 г. </div>
-                <div class="order_delivery main_text_addit_dark"> трек-номер: ABC123456789 </div>
+                <div class="order_group">
+                    <div class="item_number main_text uppercase"> заказ №35021-0003 </div>
+                    <div class="order_create main_text_addit_dark"> создан 12.06.2023 г. </div>
+                    <div class="order_delivery main_text_addit_dark"> трек-номер: ABC123456789 </div>
+                </div>
                 <div class="order_value main_text"> 31 400 р. </div>
                 <a href="personal_account_orders.html" class="open_order">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
@@ -215,7 +217,7 @@
             </div>
             <!-- Строка заказа конец -->
             <!-- Корзина с товарами начало -->
-            <div class="container order_list">
+            <div class="order_list">
                 <!-- Строчка товара в корзине начало -->
                 <div class="order_list__item">
                     <div class="order_item_foto">
@@ -228,13 +230,7 @@
                     </div>
                     <div class="order_item_price main_text"> 8 000 р. </div>
                     <div class="order_item_count">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                            <path d="M5 13V12H18V13H5Z" fill="#393939" />
-                        </svg>
-                        <p class="main_text">1</p>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                            <path d="M5 13V12H11V6H12V12H18V13H12V19H11V13H5Z" fill="#393939" />
-                        </svg>
+                        <p class="main_text">1 шт.</p>
                     </div>
                     <div class="order_item_cost main_text"> 8 000 р. </div>
                 </div>
@@ -251,13 +247,7 @@
                     </div>
                     <div class="order_item_price main_text"> 8 000 р. </div>
                     <div class="order_item_count">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                            <path d="M5 13V12H18V13H5Z" fill="#393939" />
-                        </svg>
-                        <p class="main_text">2</p>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                            <path d="M5 13V12H11V6H12V12H18V13H12V19H11V13H5Z" fill="#393939" />
-                        </svg>
+                        <p class="main_text">2 шт.</p>
                     </div>
                     <div class="order_item_cost main_text"> 16 000 р. </div>
                 </div>
@@ -274,13 +264,7 @@
                     </div>
                     <div class="order_item_price main_text"> 8 000 р. </div>
                     <div class="order_item_count">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                            <path d="M5 13V12H18V13H5Z" fill="#393939" />
-                        </svg>
-                        <p class="main_text">1</p>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                            <path d="M5 13V12H11V6H12V12H18V13H12V19H11V13H5Z" fill="#393939" />
-                        </svg>
+                        <p class="main_text">1 шт.</p>
                     </div>
                     <div class="order_item_cost main_text"> 8 000 р. </div>
                 </div>
@@ -307,9 +291,11 @@
             <!-- Корзина с товарами конец -->
             <!-- Строка заказа начало -->
             <div class="orders_history__item orders_history__item--after_opened">
-                <div class="item_number main_text uppercase"> заказ №35021-0002 </div>
-                <div class="order_create main_text_addit_dark"> создан 01.02.2024 г. </div>
-                <div class="order_delivery main_text_addit_dark"> получен 10.02.2024 г. </div>
+                <div class="order_group">
+                    <div class="item_number main_text uppercase"> заказ №35021-0002 </div>
+                    <div class="order_create main_text_addit_dark"> создан 01.02.2024 г. </div>
+                    <div class="order_delivery main_text_addit_dark"> получен 10.02.2024 г. </div>
+                </div>
                 <div class="order_value main_text"> 64 000 р. </div>
                 <a href="#" class="open_order">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
@@ -320,9 +306,11 @@
             <!-- Строка заказа конец -->
             <!-- Строка заказа начало -->
             <div class="orders_history__item">
-                <div class="item_number main_text uppercase"> заказ №35021-0001 </div>
-                <div class="order_create main_text_addit_dark"> создан 12.06.2023 г. </div>
-                <div class="order_delivery main_text_addit_dark"> получен 20.06.2023 г. </div>
+                <div class="order_group">
+                    <div class="item_number main_text uppercase"> заказ №35021-0001 </div>
+                    <div class="order_create main_text_addit_dark"> создан 12.06.2023 г. </div>
+                    <div class="order_delivery main_text_addit_dark"> получен 20.06.2023 г. </div>
+                </div>
                 <div class="order_value main_text"> 25 000 р. </div>
                 <a href="#" class="open_order">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
