--- a/basket_full.html
+++ b/basket_full.html
@@ -318,7 +318,7 @@
         <!-- Строчка товара в корзине конец -->
     </div>
     <div class="container total_cost">
-        <div class="total_cost__item">
+        <div class="total_cost__item margin_top-15">
             <div class="total_item_name main_text"> Сумма </div>
             <div class="total_item_value main_text"> 32 000 р. </div>
         </div>
