--- a/personal_account_info.html
+++ b/personal_account_info.html
@@ -202,10 +202,6 @@
         </div>
         <div class="row_info">
             <div class="row_info_col">
-                <div class="discount_cell--hidden">
-                    <p class="main_text uppercase">персональная скидка <span class="red">5%</span></p>
-                    <a href="personal_account_info_discount.html" class="small_text underline">подробнее о системе лояльности</a>
-                </div>
                 <div class="info_cell">
                     <p class="addit_text_addit_dark">Фамилия</p>
                     <form method="GET" action="#">
@@ -262,7 +258,7 @@
                         </form>
                     </div>
                 </div>
-                <a href="#" class="btn_main">
+                <a href="#" class="btn_main margin_top-15">
                     <p class="main_text uppercase btn_text">сохранить изменения</p>
                 </a>
             </div>
