--- a/about_us.html
+++ b/about_us.html
@@ -188,7 +188,7 @@
     <!-- Шапка мобильной версии конец -->
     <div class="container breadcrumbs">
         <a href="index.html" class="main_text">Главная</a>
-        <a href="catalog_main.html" class="main_text">Каталог</a>
+        <a href="about_us.html" class="main_text">О нас</a>
     </div>
     <!-- О нас начало -->
     <div class="about_us_banner"></div>
