--- a/basket_empty.html
+++ b/basket_empty.html
@@ -188,7 +188,7 @@
     <!-- Шапка мобильной версии конец -->
     <div class="container breadcrumbs">
         <a href="index.html" class="main_text">Главная</a>
-        <a href="catalog_main.html" class="main_text">Каталог</a>
+        <a href="basket_empty.html" class="main_text">Корзина</a>
     </div>
     <div class="container log_in_stroke">
         <div class="log_in_text">
