--- a/catalog_closed_filters.html
+++ b/catalog_closed_filters.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHOP | Одежда женская</title>
+    <title>SHOP | Женская одежда</title>
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 
@@ -189,6 +189,8 @@
     <div class="container breadcrumbs">
         <a href="index.html" class="main_text">Главная</a>
         <a href="catalog_main.html" class="main_text">Каталог</a>
+        <a href="catalog_women.html" class="main_text">Женщины</a>
+        <a href="catalog_closed_filters.html" class="main_text">Одежда</a>
     </div>
     <!-- Каталог Одежда с закрытыми фильтрами начало -->
     <div class="container panel_height">
