--- a/catalog_our_hits.html
+++ b/catalog_our_hits.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHOP | Распродажа</title>
+    <title>SHOP | Хиты</title>
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 
@@ -188,7 +188,7 @@
     <!-- Шапка мобильной версии конец -->
     <div class="container breadcrumbs">
         <a href="index.html" class="main_text">Главная</a>
-        <a href="catalog_main.html" class="main_text">Каталог</a>
+        <a href="catalog_our_hits.html" class="main_text">Хиты</a>
     </div>
     <!-- Распродажа начало -->
     <div class="inner_section_banner our_hits_page_banner">
@@ -201,7 +201,7 @@
             <a href="#" class="main_text_title">женщины</a>
             <a href="#" class="main_text_title">мужчины</a>
         </div>
-        <a href="search_women_men.html">
+        <a href="choice_women_men_mobile.html">
             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none" class="filter_icon">
                 <path d="M5.20898 12.4993V4.16602M19.7923 20.8327V17.7077M5.20898 20.8327V16.666M19.7923 13.541V4.16602M12.5007 7.29102V4.16602M12.5007 20.8327V11.4577" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" />
                 <path d="M5.20833 16.6667C6.35893 16.6667 7.29167 15.7339 7.29167 14.5833C7.29167 13.4327 6.35893 12.5 5.20833 12.5C4.05774 12.5 3.125 13.4327 3.125 14.5833C3.125 15.7339 4.05774 16.6667 5.20833 16.6667Z" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" />
