--- a/favourites.html
+++ b/favourites.html
@@ -188,7 +188,7 @@
     <!-- Шапка мобильной версии конец -->
     <div class="container breadcrumbs">
         <a href="index.html" class="main_text">Главная</a>
-        <a href="catalog_main.html" class="main_text">Каталог</a>
+        <a href="favourites.html" class="main_text">Избранное</a>
     </div>
     <!-- Избранное начало -->
     <div class="container favourites_panel panel_height">
