--- a/making_order_delivery_pickup.html
+++ b/making_order_delivery_pickup.html
@@ -188,7 +188,8 @@
     <!-- Шапка мобильной версии конец -->
     <div class="container breadcrumbs">
         <a href="index.html" class="main_text">Главная</a>
-        <a href="catalog_main.html" class="main_text">Каталог</a>
+        <a href="basket_full.html" class="main_text">Корзина</a>
+        <a href="making_order_data.html" class="main_text">Оформление заказа</a>
     </div>
     <!-- Оформление заказа Самовывоз начало -->
     <div class="container making_order_cols">
