--- a/personal_account_orders.html
+++ b/personal_account_orders.html
@@ -188,7 +188,7 @@
     <!-- Шапка мобильной версии конец -->
     <div class="container breadcrumbs">
         <a href="index.html" class="main_text">Главная</a>
-        <a href="catalog_main.html" class="main_text">Каталог</a>
+        <a href="personal_account_info.html" class="main_text">Личный кабинет</a>
     </div>
     <!-- Личный кабинет заказы начало -->
     <div class="container block_tabs">
