--- a/product_page.html
+++ b/product_page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHOP | Женщины</title>
+    <title>SHOP | Карточка товара</title>
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 
@@ -189,6 +189,9 @@
     <div class="container breadcrumbs">
         <a href="index.html" class="main_text">Главная</a>
         <a href="catalog_main.html" class="main_text">Каталог</a>
+        <a href="catalog_women.html" class="main_text">Женщины</a>
+        <a href="catalog_closed_filters.html" class="main_text">Одежда</a>
+        <a href="product_page.html" class="main_text">Карточка товара</a>
     </div>
     <!-- Страница товара начало -->
     <div class="container product_page">
