--- a/refund.html
+++ b/refund.html
@@ -188,7 +188,7 @@
     <!-- Шапка мобильной версии конец -->
     <div class="container breadcrumbs">
         <a href="index.html" class="main_text">Главная</a>
-        <a href="catalog_main.html" class="main_text">Каталог</a>
+        <a href="refund.html" class="main_text">Возврат</a>
     </div>
     <!-- Возврат начало -->
     <div class="container text_content_container info_pages_text min_height">
