--- a/blog.html
+++ b/blog.html
@@ -188,7 +188,7 @@
     <!-- Шапка мобильной версии конец -->
     <div class="container breadcrumbs">
         <a href="index.html" class="main_text">Главная</a>
-        <a href="catalog_main.html" class="main_text">Каталог</a>
+        <a href="blog.html" class="main_text">Наш блог</a>
     </div>
     <!-- Блог начало -->
     <div class="container our_blog">
