--- a/catalog_women.html
+++ b/catalog_women.html
@@ -189,6 +189,7 @@
     <div class="container breadcrumbs">
         <a href="index.html" class="main_text">Главная</a>
         <a href="catalog_main.html" class="main_text">Каталог</a>
+        <a href="catalog_women.html" class="main_text">Женщины</a>
     </div>
     <!-- Женщины начало -->
     <div class="catalog_women">
