--- a/contacts.html
+++ b/contacts.html
@@ -188,7 +188,7 @@
     <!-- Шапка мобильной версии конец -->
     <div class="container breadcrumbs">
         <a href="index.html" class="main_text">Главная</a>
-        <a href="catalog_main.html" class="main_text">Каталог</a>
+        <a href="contacts.html" class="main_text">Контакты</a>
     </div>
     <!-- Контакты Екатеринбург начало -->
     <div class="container conacts">
