--- a/payment.html
+++ b/payment.html
@@ -188,7 +188,7 @@
     <!-- Шапка мобильной версии конец -->
     <div class="container breadcrumbs">
         <a href="index.html" class="main_text">Главная</a>
-        <a href="catalog_main.html" class="main_text">Каталог</a>
+        <a href="payment.html" class="main_text">Оплата</a>
     </div>
     <!-- Оплата начало -->
     <div class="container text_content_container info_pages_text min_height">
