--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -188,7 +188,7 @@
     <!-- Шапка мобильной версии конец -->
     <div class="container breadcrumbs">
         <a href="index.html" class="main_text">Главная</a>
-        <a href="catalog_main.html" class="main_text">Каталог</a>
+        <a href="privacy_policy.html" class="main_text">Политика конфиденциальности</a>
     </div>
     <!-- Полилика конф. начало -->
     <div class="container text_content_container info_pages_text">
