--- a/product_page+color+size_selected.html
+++ b/product_page+color+size_selected.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHOP | Женщины</title>
+    <title>SHOP | Карточка товара</title>
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 
@@ -187,8 +187,6 @@
     </div>
     <!-- Шапка мобильной версии конец -->
     <div class="container breadcrumbs">
-        <a href="index.html" class="main_text">Главная</a>
-        <a href="catalog_main.html" class="main_text">Каталог</a>
     </div>
     <!-- Страница товара начало -->
     <div class="container product_page">
