add sticky panels

--- a/catalog_opened_filters+checkbox+active.html
+++ b/catalog_opened_filters+checkbox+active.html
@@ -340,7 +340,7 @@
         <a href="catalog_opened_filters+checkbox+active.html" class="main_text">Одежда</a>
     </div>
     <!-- Каталог Одежда с открытыми фильтрами + активные фильтры начало -->
-    <div class="container panel_height">
+    <div class="container panel_height fixed_panel">
         <div class="hide_filtres">
             <div class="hide_filters">
                 <div class="main_text_title"> скрыть фильтры </div>
