--- a/catalog_women.html
+++ b/catalog_women.html
@@ -340,7 +340,7 @@
     </div>
     <!-- Женщины начало -->
     <div class="catalog_women">
-        <div class="container panel_height ">
+        <div class="container panel_height fixed_panel">
             <div class="catalog_inner_sections">
                 <a href="catalog_opened_filters+checkbox+active.html" class="main_text_title">одежда</a>
                 <a href="#" class="main_text_title">обувь</a>
